--- a/src/components/meeting/MeetingView/MeetingView.module.css
+++ b/src/components/meeting/MeetingView/MeetingView.module.css
@@ -127,7 +127,8 @@
   .combinedSlot {
     position: absolute;
     top: 0;
-    right: 0;
+    right: 0 !important;
+    left: auto !important;
     bottom: 0;
     z-index: 25;
     width: min(calc(100vw - env(safe-area-inset-left, 0px)), 320px);
